--- a/cave-project/package.json
+++ b/cave-project/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
